News UAT/force-app/main/default/objects/OpportunityLineItem/fields/cscfga__Attribute__c.field-meta.xml
<CustomField>
    <fullName>cscfga__Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>cscfga__Attribute__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>