News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Custom_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>Custom_TotalPrice__c</fullName>
    <description>This is hidden field only for apex controller WalkinForecast_ControllerX in order to display total price input on walk-in forecast UI.</description>
    <label>Custom TotalPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>