News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>TEXT(of_Periods__c) &amp; &quot; &quot; &amp;  TEXT(Period__c)</formula>
    <label>Duration</label>
    <type>Text</type>
</CustomField>