News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Has_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Has_Sales_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used in rollup fields to count if any opportunity lines have sales orders attached. Do not display on screen.</inlineHelpText>
    <label>Has Sales Order?</label>
    <type>Checkbox</type>
</CustomField>