News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Is_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>