News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Last_Modified_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Datetime__c</fullName>
    <label>Last Modified Datetime</label>
    <type>DateTime</type>
</CustomField>