News UAT/force-app/main/default/objects/OpportunityLineItem/fields/MonthId__c.field-meta.xml
<CustomField>
    <fullName>MonthId__c</fullName>
    <formula>Opportunity.MonthId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Fiscal Month Id</label>
    <type>Text</type>
</CustomField>