News UAT/force-app/main/default/objects/OpportunityLineItem/fields/of_Periods__c.field-meta.xml
<CustomField>
    <fullName>of_Periods__c</fullName>
    <defaultValue>1</defaultValue>
    <label># of Periods</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>