News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>// Added By Tim Fabros 14 / 08 / 2014
Owner of the opportunity. Populated by OpportunityManagement.trigger</description>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>