News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Probablity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Probablity__c</fullName>
    <description>its opportunity probablity</description>
    <label>Opportunity Probablity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>