News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Product_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Line_Item_ID__c</fullName>
    <formula>Id</formula>
    <inlineHelpText>Returns the ID of the Opportunity Line so that it can be used within a report (as a filter)</inlineHelpText>
    <label>Opportunity Product Line Item ID</label>
    <type>Text</type>
</CustomField>