News UAT/force-app/main/default/objects/OpportunityLineItem/fields/OpportunityOwnerCurrentRole__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerCurrentRole__c</fullName>
    <label>Opportunity Owner Current Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>