News UAT/force-app/main/default/objects/OpportunityLineItem/fields/OpportunityOwnerExternalId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerExternalId__c</fullName>
    <formula>Opportunity.Owner.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner External Id</label>
    <type>Text</type>
</CustomField>