News UAT/force-app/main/default/objects/OpportunityLineItem/fields/OpportunityProduct_Revenue_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProduct_Revenue_Date_Actual__c</fullName>
    <description>Field used for roll-up summary on Opportunity object</description>
    <inlineHelpText>Field used for roll-up summary on Opportunity object</inlineHelpText>
    <label>OpportunityProduct Revenue Date Actual</label>
    <type>DateTime</type>
</CustomField>