News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Original_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Price__c</fullName>
    <description>Using this field to keep tracking the price of opportunity product before update</description>
    <label>Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>