News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <description>Hyperlink to parent opportunity. Tests for service cloud console and constructs appropriate link.</description>
    <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&#39;function&#39;) {srcUp(&#39;&quot; + OpportunityId + &quot;?isdtp=vw&#39;); } else {window.location.assign(&#39;/&quot; + OpportunityId + &quot;&#39;) }&quot;,  Opportunity.Name, &#39;_parent&#39; )</formula>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>