News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <label>Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Every 2 Weeks</fullName>
            </value>
            <value>
                <fullName>Every 3 Weeks</fullName>
            </value>
            <value>
                <fullName>Every 4 Weeks</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>