News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Week(s)</fullName>
            </value>
            <value>
                <fullName>Month(s)</fullName>
                <default>true</default>
                <label>Month(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>