News UAT/force-app/main/default/objects/OpportunityLineItem/fields/ProductFamilyClassification__c.field-meta.xml
<CustomField>
    <fullName>ProductFamilyClassification__c</fullName>
    <description>Determining whether the product is print or digital</description>
    <formula>IF(
ISPICKVAL(PricebookEntry.Product2.Family,&#39;Digital&#39;), &#39;Digital&#39;,
IF(OR(
ISPICKVAL(PricebookEntry.Product2.Family,&#39;Magazine&#39;),
ISPICKVAL(PricebookEntry.Product2.Family,&#39;Print Community&#39;),
ISPICKVAL(PricebookEntry.Product2.Family,&#39;Print Metro&#39;)), &#39;Print&#39;, &#39;&#39;
))</formula>
    <label>Product Family Classification</label>
    <type>Text</type>
</CustomField>