News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Reporting_Type_L1__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Type_L1__c</fullName>
    <description>Field is used for reporting to filter target vs forecast 
Another field Type L2 is used to filter forecast to - booked vs pipeline.</description>
    <formula>IF(CONTAINS(PricebookEntry.Product2.Name, &quot;Target&quot;),
  &quot;Target&quot;,
  IF(CONTAINS(PricebookEntry.Product2.Name, &quot;Walk-In&quot;),
    &quot;Forecast&quot;,
    IF(Opportunity.Count_Sales_Order_Line_Item__c &gt;=1, &quot;Forecast&quot;, &quot;Forecast&quot;)

  /* Essentially all opportunity lines are considered &#39;forecast&#39;. Reporting Type 2 - allows a finer categorisation between booked vs actual */
  )
)</formula>
    <label>Reporting Type L1</label>
    <type>Text</type>
</CustomField>