News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Reporting_Type_L2__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Type_L2__c</fullName>
    <description>Filter forecast to - booked vs pipeline.</description>
    <formula>IF(CONTAINS(PricebookEntry.Product2.Name, &quot;Target Digital&quot;),
  &quot;Target Digital&quot;,

  IF(CONTAINS(PricebookEntry.Product2.Name, &quot;Target Print&quot;),
    &quot;Target Print&quot;,

    IF(CONTAINS(PricebookEntry.Product2.Name, &quot;Target Magazine&quot;),
      &quot;Target Magazine&quot;,

      IF(CONTAINS(PricebookEntry.Product2.Name, &quot;Walk-In&quot;),
      &quot;Pipeline&quot;,

        IF(Opportunity.Count_Sales_Order_Line_Item__c &gt;=1, &quot;Booked&quot;, &quot;Pipeline&quot;)
      )
    )
  )
)</formula>
    <label>Reporting Type L2</label>
    <type>Text</type>
</CustomField>