News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Revenue_AtClose__c.field-meta.xml
<CustomField>
    <fullName>Revenue_AtClose__c</fullName>
    <inlineHelpText>Revenue for opportunity product line at the time the opportunity has Closed Won/ Lost.</inlineHelpText>
    <label>Revenue At Close</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>