News UAT/force-app/main/default/objects/OpportunityLineItem/fields/RollupTrigger__c.field-meta.xml
<CustomField>
    <fullName>RollupTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the Opportunity or Sales Order is updated and the rollup (Sales Summary) process needs to be fired. There is a workflow that will set it back to false ready to be checked again in the future.</description>
    <label>Rollup Trigger</label>
    <type>Checkbox</type>
</CustomField>