News UAT/force-app/main/default/objects/OpportunityLineItem/fields/SalesOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderStatus__c</fullName>
    <formula>TEXT(Sales_Order__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Status</label>
    <type>Text</type>
</CustomField>