News UAT/force-app/main/default/objects/OpportunityLineItem/fields/SalesSummary__c.field-meta.xml
<CustomField>
    <fullName>SalesSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Summary</label>
    <referenceTo>SalesSummary__c</referenceTo>
    <relationshipLabel>Opportunity Products</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>