News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Schedule_Date_Earliest__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_Earliest__c</fullName>
    <inlineHelpText>Returns the earliest scheduled date from the revenue schedule. Populated by Apex and used to identify any accounts with revenue schedules prior to close dates.</inlineHelpText>
    <label>Schedule Date (Earliest)</label>
    <type>Date</type>
</CustomField>