News UAT/force-app/main/default/objects/OpportunityLineItem/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>NewAdds</fullName>
            </value>
            <value>
                <fullName>NewsAdds</fullName>
                <isActive>false</isActive>
                <label>NewsAdds</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>