News UAT/force-app/main/default/objects/OpportunityLineItem/fields/UnitPrice_GST_Incl__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice_GST_Incl__c</fullName>
    <formula>(1 + $Setup.News_Default_Setting__c.GST_Percentage__c) *  UnitPrice</formula>
    <label>Revenue GST Incl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>