News UAT/force-app/main/default/objects/OpportunityLineItem/validationRules/OptyLine_Unit_GreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>OptyLine_Unit_GreaterThanZero</fullName>
    <active>false</active>
    <description>&#39;Unit&#39; for scheduling must be greater than &#39;0&#39;</description>
    <errorConditionFormula>of_Periods__c &gt;=1</errorConditionFormula>
    <errorDisplayField>of_Periods__c</errorDisplayField>
    <errorMessage>The number of periods must be equal or greater than &#39;1&#39;. Please review your data entry.</errorMessage>
</ValidationRule>